# hackason

./: .firebaserc  .gitignore  CLAUDE.md  DEPLOYMENT.md  README.md  SYSTEM_ARCHITECTURE.md  architecture.md  firebase.json  main.py  newsletter_template.md  pyproject.toml  requirements.md  system_architecture.md
content_generator/: .firebaserc.backup  README.md  agent.py  architecture.md  firebase.json  firebase.json.backup  llm.md  pyproject.toml
content_generator/functions/: .env.yaml  .gitignore  agent.py  firebase-functions.yaml  main.py  requirements.txt
content_generator/functions/notebook_agent/: main.py  notebook_agent.py
dairy_publisher/functions/notebook_agent/: .env.example  README.md  (+2 more)
media_processing_agent/: .gitignore  MULTI_FACETED_ANALYSIS.md  README.md  agent.py  check_episode_details.py  clear_firestore_data.py  create_test_image.py  create_trigger.sh  deploy.sh  deploy_simple.sh  fun_query.json  generate_test_vector.py  llm.md  pyproject.toml  reset_media_uploads.py  reset_vector_index.sh  search_fun_episodes.py  test.txt  test_captured_at.py  test_firestore_trigger.py  test_firestore_trigger_v2.py  test_http_trigger.py  test_mime_type.py  test_multi_faceted_analysis.py  test_multi_faceted_with_sample.py  test_query.json  test_query_768.json  test_vector_query.py  test_with_actual_video.py  test_with_real_file.py  vector_data_structure.md
media_processing_agent/cloud_functions/: .gcloudignore  README.md  cloudbuild.yaml  main.py  requirements.txt
media_processing_agent/functions/: agent.py  main.py  requirements.txt  video_thumbnail.py  video_upload_handler.py
photo_web_app/: .env.example  .gitignore  Makefile  README.md  app.py  client_secret_431161319367-grt0tbg2ih21a5qrnsrvs0l43aqivkd3.apps.googleusercontent.com.json  main.py  pyproject.toml  test_app.py
photo_web_app/templates/: base.html  index.html  scan.html  upload.html
(+90 files in other folders)
