[project]
name = "dairy-publisher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-adk>=1.5.0",
    "google-cloud-firestore>=2.11.0",
    "google-cloud-aiplatform>=1.38.0",
    "vertexai>=1.38.0",
    "python-dotenv>=1.0.0",
]

[tool.uv.workspace]
members = ["functions/notebook_agent"]
