[project]
name = "media_processing_agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-adk>=1.5.0",
    "google-cloud-aiplatform>=1.100.0",
    "google-cloud-firestore>=2.21.0",
    "python-dotenv>=1.1.1",
]
