[project]
name = "notebook-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-cloud-aiplatform>=1.100.0",
    "google-cloud-firestore>=2.21.0",
    "google-generativeai>=0.8.5",
    "python-dotenv>=1.1.1",
    "vertexai>=1.43.0",
]
